--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
             rgba(62, 20, 20, 0.4),
             rgba(62, 20, 20, 0.4)
         ),
-        url(back.jpg);
+        url(../images/back.jpg);
     background-size: cover;
     background-position: center;
     font-family: Lato;
